remove useless attributes from definitions
