# app/serializers/api/v1/authorization_definition_serializer.rb
@@ -1,17 +1,6 @@
 class API::V1::AuthorizationDefinitionSerializer < ActiveModel::Serializer
   attributes :id,
     :name,
-    :provider,
-    :description,
-    :link,
-    :access_link,
-    :cgu_link,
-    :support_email,
-    :kind,
-    :scopes,
-    :blocks,
-    :features,
-    :stage,
     :name_with_stage,
     :multi_stage?,
     :authorization_request_class
